Add logic